--- a/package.json
+++ b/package.json
@@ -1,24 +1,51 @@
 {
-  "name": "libcoin",
-  "description": "Bitcoin Library",
-  "version": "0.1.0",
+  "name": "bitcoind-rpc",
+  "description": "Bitcoin Client Library to connect to Bitcoin Core via RPC",
+  "version": "0.2.0",
   "author": {
     "name": "Stephen Pair",
     "email": "stephen@bitpay.com"
   },
-  "main": "./index",
+  "contributors": [
+    {
+      "name": "Jeff Garzik",
+      "email": "jgarzik@bitpay.com"
+    },
+    {
+      "name": "Manuel Araoz",
+      "email": "manuelaraoz@gmail.com"
+    },
+    {
+      "name": "Matias Alejo Garcia",
+      "email": "ematiu@gmail.com"
+    },
+    {
+      "name": "Braydon Fuller",
+      "email": "braydon@bitpay.com"
+    }
+  ],
   "keywords": [
     "bitcoin",
-    "btc",
-    "satoshi",
-    "money",
-    "currency",
-    "virtual"
+    "rpc"
   ],
   "repository": {
     "type": "git",
-    "url": "http://github.com/gasteve/node-libcoin.git"
+    "url": "https://github.com/bitpay/bitcoind-rpc"
   },
-  "scripts": {},
-  "license": "MIT"
+  "license": "MIT",
+  "main": "lib/index.js",
+  "scripts": {
+    "test": "mocha test -R spec"
+  },
+  "devDependencies": {
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-mocha-test": "~0.8.2",
+    "grunt-browserify": "~1.3.0",
+    "grunt-markdown": "~0.5.0",
+    "chai": "~1.9.0"
+  },
+  "bugs": {
+    "url": "https://github.com/bitpay/bitcoind-rpc/issues"
+  },
+  "homepage": "https://github.com/bitpay/bitcoind-rpc"
 }
