--- a/package.json
+++ b/package.json
@@ -38,11 +38,8 @@
     "test": "mocha test -R spec"
   },
   "devDependencies": {
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-mocha-test": "~0.8.2",
-    "grunt-browserify": "~1.3.0",
-    "grunt-markdown": "~0.5.0",
-    "chai": "~1.9.0"
+    "chai": "^1.10.0",
+    "mocha": "^2.1.0"
   },
   "bugs": {
     "url": "https://github.com/bitpay/bitcoind-rpc/issues"
