--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
   "license": "MIT",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha test -R spec"
+    "test": "node_modules/.bin/mocha test -R spec",
+    "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- --recursive"
   },
   "devDependencies": {
+    "async": "^0.9.0",
     "chai": "^1.10.0",
+    "istanbul": "^0.3.5",
     "mocha": "^2.1.0"
   },
   "bugs": {
