--- a/package.json
+++ b/package.json
@@ -1,36 +1,18 @@
 {
-  "name": "bitcoind-rpc",
-  "description": "Bitcoin Client Library to connect to Bitcoin Core via RPC",
-  "version": "0.8.1",
+  "name": "bitcoind-rpc-zmaike",
+  "description": "Bitcoin Client Library to connect to Bitcoin Core via RPC. Forked from https://github.com/bitpay/bitcoind-rpc. Already submit a pull request to the origin project.",
+  "version": "0.8.2",
   "author": {
-    "name": "Stephen Pair",
-    "email": "stephen@bitpay.com"
+    "name": "zmaike",
+    "email": "juxiez5@126.com"
   },
-  "contributors": [
-    {
-      "name": "Jeff Garzik",
-      "email": "jgarzik@bitpay.com"
-    },
-    {
-      "name": "Manuel Araoz",
-      "email": "manuelaraoz@gmail.com"
-    },
-    {
-      "name": "Matias Alejo Garcia",
-      "email": "ematiu@gmail.com"
-    },
-    {
-      "name": "Braydon Fuller",
-      "email": "braydon@bitpay.com"
-    }
-  ],
   "keywords": [
     "bitcoin",
     "rpc"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/bitpay/bitcoind-rpc"
+    "url": "https://github.com/zmaike/bitcoind-rpc"
   },
   "license": "MIT",
   "main": "lib/index.js",
@@ -46,8 +28,5 @@
     "mocha": "^2.1.0",
     "sinon": "^1.12.2"
   },
-  "bugs": {
-    "url": "https://github.com/bitpay/bitcoind-rpc/issues"
-  },
-  "homepage": "https://github.com/bitpay/bitcoind-rpc"
+  "homepage": "https://github.com/zmaike/bitcoind-rpc"
 }
